bugfix(modules) add min-height to prevent covering sections

--- a/src/app/modules/meeting/overview/found/found.component.scss
+++ b/src/app/modules/meeting/overview/found/found.component.scss
@@ -8,9 +8,14 @@
   background: gray('100');
 }
 
+.wrapper {
+  min-height: 104px;
+}
+
 .header {
   font-size: 2.2rem;
   font-weight: 200;
+  max-width: 330px;
 
   .header-icon {
     color: theme-color('danger');
