--- a/src/app/modules/meeting/overview/searching/searching.component.scss
+++ b/src/app/modules/meeting/overview/searching/searching.component.scss
@@ -8,6 +8,10 @@
   background: gray('100');
 }
 
+.wrapper {
+  min-height: 156px;
+}
+
 .header {
   font-size: 2.2rem;
   font-weight: 200;
