--- a/src/app/modules/meeting/overview/unspecified/unspecified.component.scss
+++ b/src/app/modules/meeting/overview/unspecified/unspecified.component.scss
@@ -8,6 +8,10 @@
   font-size: 140px;
 }
 
+.wrapper {
+  min-height: 400px;
+}
+
 .content {
   max-width: 330px;
 }
