--- a/src/app/modules/profile/overview/overview.page.scss
+++ b/src/app/modules/profile/overview/overview.page.scss
@@ -62,4 +62,5 @@
 .preview {
   border-bottom-left-radius: 30px;
   border-bottom-right-radius: 30px;
+  min-height: 350px;
 }
